--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,8 +1,4 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
-
-<div class="content">
-	<div class="post">{{ content }}</div>
-</div>
+{% include page.html %}
