--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,8 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
-<span class="time">{{ page.date | date_to_string }}</span>
+{% include post.html %}
 
-<div class="content">
-	<div class="post">{{ content }}</div>
-</div>
+{% if site.disqus and page.comments %}
+    {% include disqus.html %}
+{% endif %}
