--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,3 +211,17 @@ code {color: #2c3e50; background: #F5F5F5; padding: 2px 8px;}
 
 blockquote { border-left: 0px; padding: 10px 0px;}
 blockquote p {font-family: 'Playfair Display', serif; font-weight: 400; font-style: italic; font-size: 30px;}
+
+/* loose padding around footer so tight + on right */
+blockquote footer       {padding: 0; font-size: 80%; text-align: right; text-style: italic;}
+blockquote p { display: inline;}
+.caption {
+    display: block;
+    font-size: 14px;
+    font-style: italic;
+    margin: 0;
+    padding: 10px;
+    text-align: center;
+}
+.img-responsive {  margin: 0 auto; max-height: 600px;}
+
